Fixed:getBoundingClientRect() returning empty on smaller screen widths

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@
 .bottom-buffer{
     margin-bottom: 30px;
 }
-.back-to-top img {
+.next-section img {
     width: 50px;
     transform: rotate(90deg);
     float: right;
@@ -73,7 +73,7 @@
 }
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { ... }
+/* @media (min-width: 576px) { ... } */
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
@@ -117,7 +117,7 @@
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { ... }
+/* @media (min-width: 992px) { ... } */
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { ... }
+/* @media (min-width: 1200px) { ... } */
